--- a/ietech.html
+++ b/ietech.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>การทดลองที่ 2 การใช้ github ทำงานเป็นทีม </title> 
+<title> การทดลองที่ 2 การใช้ gitHub ทำงานเป็นทีม </title>
 </head>
 <body>
-<hl>คณะครุศาสตร์อุตสาหกรรม</hl>
+<h1>ภาควิชาครุศาสตร์วิศวกรรม</h1>
 <ol>
-<li>ภาควิชาครุศาสตร์วิศวกรรม
-<li>ภาควิชาครุศาสตร์สถาปัตยกรรมเเละการออกเเบบ
-<li>ภาควิชาครุศาสตร์เกษตร
-<li>ภาควิชาครุศาสตร์อุตสาหกรรม
+<li>แขนงวิชาวิศวกรรมโทรคมนาคม
+<li>แขนงวิชาวิศวกรรมอิเล็กทรอนิกส์
+<li>แขนงวิชาวิศวกรรมคอมพิใเตอร์
+<li>แขนงวิชาวเทคโนโลยับัณฑิต
 </body>
 </html>
