--- a/ietech.html
+++ b/ietech.html
@@ -3,8 +3,9 @@
 <title> การทดลองที่ 2 การใช้ gitHub ทำงานเป็นทีม </title>
 </head>
 <body>
-<h1>ภาควิชาครุศาสตร์วิศวกรรม</h1>
+<h1>ภาควิชาครุศาสตร์อุตสาหกรรม</h1>
 <ol>
+<a href="engedu.html" target="blank"><li>ภาควิชาครุศาสตร์วิศวกรรม</a>
 <li>แขนงวิชาวิศวกรรมโทรคมนาคม
 <li>แขนงวิชาวิศวกรรมอิเล็กทรอนิกส์
 <li>แขนงวิชาวิศวกรรมคอมพิใเตอร์
