--- a/ietech.html
+++ b/ietech.html
@@ -6,7 +6,7 @@
 <h1>ภาควิชาครุศาสตร์อุตสาหกรรม</h1>
 <ol>
 <a href="engedu.html" target="blank"><li>ภาควิชาครุศาสตร์วิศวกรรม</a>
-<li>แขนงวิชาวิศวกรรมโทรคมนาคม
+<a href="engedu.html" target="blank"><li>แขนงวิชาวิศวกรรมโทรคมนาคม</a>
 <li>แขนงวิชาวิศวกรรมอิเล็กทรอนิกส์
 <li>แขนงวิชาวิศวกรรมคอมพิใเตอร์
 <li>แขนงวิชาวเทคโนโลยับัณฑิต
