--- a/engedu.html
+++ b/engedu.html
@@ -1,14 +1,13 @@
 <html>
 <head>
-<title> การทดลองที่ 2 การใช้ gitHub ทำงานเป็นทีม </title>
+<title> เธเธฒเธฃเธ—เธ”เธฅเธญเธเธ—เธตเน 2 เธเธฒเธฃเนเธเน gitHub เธ—เธณเธเธฒเธเน€เธเนเธเธ—เธตเธก  </title>
 </head>
 <body>
-<h1>ภาควิชาครุศาสตร์อุตสาหกรรม</h1>
+<h1>เธ เธฒเธเธงเธดเธเธฒเธเธฃเธธเธจเธฒเธชเธ•เธฃเนเธงเธดเธจเธงเธเธฃเธฃเธก</h1>
 <ol>
-<a href="engedu.html" target="blank"><li>ภาควิชาครุศาสตร์วิศวกรรม</a>
-<a href="engedu.html" target="blank"><li>แขนงวิชาวิศวกรรมโทรคมนาคม</a>
-<li>แขนงวิชาวิศวกรรมอิเล็กทรอนิกส์
-<li>แขนงวิชาวิศวกรรมคอมพิใเตอร์
-<li>แขนงวิชาวเทคโนโลยับัณฑิต
+<li>เนเธเธเธเธงเธดเธเธฒเธงเธดเธจเธงเธเธฃเธฃเธกเนเธ—เธฃเธเธกเธเธฒเธเธก
+<li>เนเธเธเธเธงเธดเธเธฒเธงเธดเธจเธงเธเธฃเธฃเธกเธญเธดเน€เธฅเนเธเธ—เธฃเธญเธเธดเธเธชเน
+<li>เนเธเธเธเธงเธดเธเธฒเธงเธดเธจเธงเธเธฃเธฃเธกเธเธญเธกเธเธดเนเน€เธ•เธญเธฃเน
+<li>เนเธเธเธเธงเธดเธเธฒเธงเน€เธ—เธเนเธเนเธฅเธขเธฑเธเธฑเธ“เธ‘เธดเธ•
 </body>
 </html>
