--- a/ietech.html
+++ b/ietech.html
@@ -7,7 +7,7 @@
 <ol>
 <a href="engedu.html" target="blank"><li>ภาควิชาครุศาสตร์วิศวกรรม</a>
 <a href="engedu.html" target="blank"><li>แขนงวิชาวิศวกรรมโทรคมนาคม</a>
-<li>แขนงวิชาวิศวกรรมอิเล็กทรอนิกส์
+<a href="engedu.html" target="blank"><li>แขนงวิชาวิศวกรรมอิเล็กทรอนิกส์</a>
 <li>แขนงวิชาวิศวกรรมคอมพิใเตอร์
 <li>แขนงวิชาวเทคโนโลยับัณฑิต
 </body>
